<resources>
    <string name="app_name">Coffee</string>

    <string name="title_activity_coffee_machine_detail">Coffee Machine Details</string>
    <string name="title_activity_pre_order">PreOrder Details</string>
    <string name="title_activity_doc_goods">Doc Goods Details</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_drawer_menu_item_1">Machines</string>
    <string name="nav_drawer_menu_item_2">PreOrders</string>
    <string name="nav_drawer_menu_item_3">Documents</string>
    <string name="nav_drawer_menu_item_4">Settings</string>
    <string name="nav_drawer_menu_item_5">Logout</string>


    // Navigation Drawer Machine Fragment
    <string name="nav_drawer_machine_text_view_text">Refresh to update the Data</string>
    <string name="nav_drawer_machine_text_view_api_failure_text">Can\'t Establish a Connection to the Server  %s  %s</string>

    // Coffee Machine ViewPager page titles
    <string name="coffee_machine_sale_page_title">Sale</string>
    <string name="coffee_machine_produced_page_title">Sale Produced</string>
    <string name="coffee_machine_raw_materials_page_title">Raw Materials</string>
    <string name="coffee_machine_money_page_title">Money</string>

    // actionbar menu
    <string name="search_title">search</string>
    <string name="settings_title">settings</string>

    // documents fragment menu
    <string name="search_documents_fragment_title">search</string>
    <string name="pick_date_documents_fragment">pick date</string>

    // Login Activity
    <string name="login_sign_in_button_text">Sign in</string>
    <string name="login_cancel_button_text">Exit</string>

    // DocGoodsActivity
    <string name="doc_goods_doc_id">"Document id: "</string>
    <string name="doc_goods_correspond_acc">"acc: "</string>
    <string name="doc_goods_waybill_num">"waybill: "</string>

    // Dialog texts
    <string name="dialog_edit_product_data_text_1">Quantity 1</string>
    <string name="dialog_edit_product_data_text_2">Quantity 2</string>



</resources>
