<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first"

            android:title="@string/nav_drawer_menu_item_1" />
        <item
            android:id="@+id/nav_second"

            android:title="@string/nav_drawer_menu_item_2" />
        <item
            android:id="@+id/nav_third"

            android:title="@string/nav_drawer_menu_item_3" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_login"

                android:title="@string/nav_drawer_menu_item_4" />
            <item
                android:id="@+id/nav_logout"

                android:title="@string/nav_drawer_menu_item_5" />
        </menu>
    </item>

</menu>
